--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body class="body">
-        <title>Daniel's Program 4</title>
+        <link rel="style" href="styling.css">
+        <h1>Daniel's Program 4</h1>
 
         <button onclick="loadButtonClicked()" class="button">Load Data</button>
         <button onclick="clearButtonClicked()" class="button">Clear Data</button>
