--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
         
         <script language="Javascript">
             function loadButtonClicked() {
-                document.getElementById("userfeedback").innerHTML = "Loading data into Bucket and NoSQL Storage";
+                //document.getElementById("userfeedback").innerHTML = "Loading data into Bucket and NoSQL Storage";
+                requestURL = "https://s3-us-west-2.amazonaws.com/css490/input.txt";
                 // TODO: 
                 // - Get data from https://s3-us-west-2.amazonaws.com/css490/input.txt
                 // - Upload text to S3 bucket "Program4"
                 // - Parse into objects and upload each object key-value pair in Dyanmo DB table
+                var request = new XMLHttpRequest();
+                request.open("GET", requestURL, false);
+                document.getElementById("userfeedback").innerHTML = request.responseText;
             }
 
             function clearButtonClicked() {
