--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
                 // - Upload text to S3 bucket "css436program4storage"
                 // - Parse into objects and upload each object key-value pair in Dyanmo DB table
                 var request = new XMLHttpRequest();
-                await request.open("GET", requestURL);
-                document.getElementById("userfeedback").innerHTML = request.responseText;
+                request.open("GET", requestURL, true);
+                request.send();
+                request.onreadystatechange = function () {
+                    if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
+                        document.getElementById("userfeedback").innerHTML = JSON.parse(request.responseText);
+                    }
+                }
             }
 
             function clearButtonClicked() {
