--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = request.responseText;
+                        document.getElementById("userfeedback").innerHTML = request.response;
                     }
                 }
             }
