--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         <script language="Javascript">
             function loadButtonClicked() {
                 document.getElementById("userfeedback").innerHTML = "Loading data into Bucket and NoSQL Storage";
-                bucketLoadURL = "arn:aws:execute-api:us-east-1:909176613742:htry3uqdfb/*/POST/loadbucket";
-                //bucketLoadURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/loadbucket";
+                //bucketLoadURL = "arn:aws:execute-api:us-east-1:909176613742:htry3uqdfb/*/POST/loadbucket";
+                bucketLoadURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/loadbucket";
                 tableLoadURL = "arn:aws:execute-api:us-east-1:909176613742:htry3uqdfb/*/POST/loadtable";
                 
 
 
                 var request = new XMLHttpRequest();
-                request.open("GET", bucketLoadURL, true);
+                request.open("POST", bucketLoadURL, true);
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
