--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 var request = new XMLHttpRequest();
                 request.open("POST", bucketLoadURL, true);
                 request.send();
+                print(request.status())
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
                         document.getElementById("userfeedback").innerHTML = request.response;
