--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
                 queryTableURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/querytable";
                 var request = new XMLHttpRequest();
                 request.open("GET", queryTableURL, true)
-                //request.send(JSON.stringify(requestBody))
-                request.send(requestBody)
+                request.send(JSON.stringify(requestBody))
                 request.onreadystatechange = function () {
                 if (request.readyState == 4 && request.status == 200) {
                         document.getElementById("queryresults").innerHTML = request.responseText;
