centering website UI

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <body class="body">
-        <link rel="style" href="styling.css">
+    <body style="justify-content: center;align-items: center;margin: auto;">
+        <!-- <link rel="style" href="styling.css"> -->
         <h1>Daniel's Cloud Computing Program 4</h1>
 
         <div class="main">
