--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body style="text-align: center">
+    <body style="text-align: center; font-size: x-large">
         <h1>Daniel's Cloud Computing Program 4</h1>
 
         <div>
@@ -29,12 +29,12 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = request.response;
+                        document.getElementById("userfeedback").innerHTML = request.responseText;
                         request.open("POST", tableLoadURL, true);
                         request.send();
                         request.onreadystatechange = function () {
                             if (request.readyState == 4 && request.status == 200) {
-                                document.getElementById("userfeedback").innerHTML = request.response;
+                                document.getElementById("userfeedback").innerHTML = request.responseText;
                             }   
                         };
                     }
@@ -49,7 +49,7 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = request.response;
+                        document.getElementById("userfeedback").innerHTML = request.responseText;
                     }
                 };
             }
@@ -70,6 +70,7 @@
                 request.send(JSON.stringify({"firstname": firstNameInput, "lastname": lastNameInput}));
                 request.onreadystatechange = function () {
                 if (request.readyState == 4 && request.status == 200) {
+                        document.getElementById("userfeedback").innerHTML = "Query Matches:";
                         document.getElementById("queryresults").innerHTML = request.responseText;
                     }
                 };
