--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script language="Javascript">
             function loadButtonClicked() {
                 document.getElementById("userfeedback").innerHTML = "Loading data into Bucket and NoSQL Storage";
+                document.getElementById("queryresults").innerHTML = "";
                 bucketLoadURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/loadbucket";
                 tableLoadURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/loadtable";
                 
@@ -29,7 +30,7 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = request.responseText;
+                        document.getElementById("userfeedback").innerHTML = JSON.parse(request.responseText);
                         request.open("POST", tableLoadURL, true);
                         request.send();
                         request.onreadystatechange = function () {
@@ -43,15 +44,18 @@
             }
 
             function clearButtonClicked() {
-                document.getElementById("userfeedback").innerHTML = "Deleting all data from Bucket and NoSQL Storage";
+                document.getElementById("userfeedback").innerHTML = "Deleting All Data From Bucket and NoSQL Storage";
+                document.getElementById("queryresults").innerHTML = "";
                 clearStorageURL = "https://htry3uqdfb.execute-api.us-east-1.amazonaws.com/prod/emptyallstorage";
                 var request = new XMLHttpRequest();
                 request.open("DELETE", clearStorageURL, true);
                 request.send();
                 request.onreadystatechange = function () {
+                    document.getElementById("queryresults").innerHTML = "";
                     if (request.readyState == 4 && request.status == 200) {
                         document.getElementById("userfeedback").innerHTML = request.responseText;
-                        document.getElementById("queryresults").innerHTML = "";
+                    } else {
+                        document.getElementById("userfeedback").innerHTML = "Bucket and Table Already Empty";
                     }
                 };
             }
