--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = JSON.parse(request.responseText);
+                        document.getElementById("userfeedback").innerHTML = JSON.parse(request.responseText, "body");
                         request.open("POST", tableLoadURL, true);
                         request.send();
                         request.onreadystatechange = function () {
@@ -51,13 +51,15 @@
                 request.open("DELETE", clearStorageURL, true);
                 request.send();
                 request.onreadystatechange = function () {
-                    document.getElementById("queryresults").innerHTML = "";
                     if (request.readyState == 4 && request.status == 200) {
+                        document.getElementById("queryresults").innerHTML = "";
                         document.getElementById("userfeedback").innerHTML = request.responseText;
-                    } else {
-                        document.getElementById("userfeedback").innerHTML = "Bucket and Table Already Empty";
                     }
                 };
+                request.onerror = function () {
+                    document.getElementById("queryresults").innerHTML = "";
+                    document.getElementById("userfeedback").innerHTML = "Bucket and Table Already Empty";
+                }
             }
 
             function queryButtonClicked() {
