--- a/index.html
+++ b/index.html
@@ -30,16 +30,18 @@
                 request.send();
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
-                        document.getElementById("userfeedback").innerHTML = request.responseText;
+                        document.getElementById("queryresults").innerHTML = "";
                         const responseJSON = request.responseText;
                         const response = JSON.parse(responseJSON);
-                        console.log(response.body);
+                        document.getElementById("userfeedback").innerHTML = request.body;
                         request.open("POST", tableLoadURL, true);
                         request.send();
                         request.onreadystatechange = function () {
                             if (request.readyState == 4 && request.status == 200) {
-                                document.getElementById("userfeedback").innerHTML = request.responseText;
                                 document.getElementById("queryresults").innerHTML = "";
+                                const responseJSON = request.responseText;
+                                const response = JSON.parse(responseJSON);
+                                document.getElementById("userfeedback").innerHTML = request.body;
                             }   
                         };
                     }
@@ -56,7 +58,9 @@
                 request.onreadystatechange = function () {
                     if (request.readyState == 4 && request.status == 200) {
                         document.getElementById("queryresults").innerHTML = "";
-                        document.getElementById("userfeedback").innerHTML = request.responseText;
+                        const responseJSON = request.responseText;
+                        const response = JSON.parse(responseJSON);
+                        document.getElementById("userfeedback").innerHTML = request.body;
                     }
                 };
                 request.onerror = function () {
@@ -83,7 +87,9 @@
                 request.onreadystatechange = function () {
                 if (request.readyState == 4 && request.status == 200) {
                         document.getElementById("userfeedback").innerHTML = "Query Matches:";
-                        document.getElementById("queryresults").innerHTML = request.responseText;
+                        const responseJSON = request.responseText;
+                        const response = JSON.parse(responseJSON);
+                        document.getElementById("queryresults").innerHTML = request.body;
                     }
                 };
             }
